<resources>
    <string name="app_name">Jogjegyzet</string>
    <string name="search">Keresés</string>
    <string name="category">Kategória</string>
    <string name="name">Név</string>
    <string name="description">Leírás</string>
    <string name="num_downloads">Letöltések száma</string>
    <string name="error">Hiba!</string>
    <string name="open">Megnyitás</string>
    <string name="noresult">Nincs találat a \"%s\" kifejezésre</string>
    <string name="thumpsup">thumpsup</string>
    <string name="thumpsdown">thumpsdown</string>
    <string name="ratings">Értékelések</string>
    <string name="comments">Hozzászólások</string>
    <string name="emptycat">Ide még nem töltöttek fel dokumentumot és nem alakítottak ki kategóriát.</string>
    <string name="nointernet">Hálózati hiba! Ellenőrizd az internetkapcsolatot</string>
    <string name="cat_error">Hiba a kategória megjelenítésekor</string>
    <string name="search_error">Hiba a kereséskor</string>
    <string name="profile_pic">Profilkép</string>
    <string name="no_comment">Nincs hozzászólás</string>
    <string name="retry">Újratöltés</string>
    <string name="add_to_favorites">Hozzáadás a kedvencekhez</string>
    <string name="remove_from_favorites">Eltávolítás a kedvencek közül</string>
    <string name="favorites_card_title">Kedvencek:</string>
    <string name="card_title_categories">Kategóriák:</string>
    <string name="search_empty_query">Írjon be egy kifejezést a kereséshez</string>
    <string name="back">Vissza</string>
    <string name="clear">Törlés</string>
    <string name="info">Részletek</string>
    <string name="open_in_browser">Megnyitás böngészőben</string>
    <string name="undo">Visszavonás</string>
    <string name="added_to_favs">Hozzáadva a kedvencekhez</string>
    <string name="removed_from_favs">Eltávolítva a kedvencek közül</string>
    <string name="update">Frissítés</string>
    <string name="later">Később</string>
</resources>
