<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.gergelydaniel.jogjegyzet.ui.CardWithTitle
            android:id="@+id/card_favorites"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#fffaeb"
            app:title="@string/favorites_card_title"
            app:icon_drawable="@drawable/ic_star"
            app:icon_color="#FFC107">

            <com.gergelydaniel.jogjegyzet.ui.NotRecyclingView
                android:id="@+id/list_favorites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

        </com.gergelydaniel.jogjegyzet.ui.CardWithTitle>


        <com.gergelydaniel.jogjegyzet.ui.CardWithTitle
            android:id="@+id/card_categories"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#E8EAF6"
            app:title="@string/card_title_categories"
            app:icon_drawable="@drawable/ic_library_books"
            app:icon_color="#3F51B5">

            <com.gergelydaniel.jogjegyzet.ui.NotRecyclingView
                android:id="@+id/list_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <ProgressBar
                android:id="@+id/category_progress"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"/>

            <FrameLayout
                android:id="@+id/error"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="150dp"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/error_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/error_retry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/retry"/>
            </FrameLayout>

        </com.gergelydaniel.jogjegyzet.ui.CardWithTitle>



    </LinearLayout>
</ScrollView>